fixing spacing and new CNAME

--- a/css/sab-stylesheet.css
+++ b/css/sab-stylesheet.css
@@ -599,6 +599,7 @@ span.nd2 {
     vertical-align: sub;
     font-weight: bold;   
     font-size: 60%;
+	margin-left: -0.3em;
 }
 
 span.ord {
